# chatwoot-app

./: .gitignore  README.md  chatwoot-app.spec  main.py  pyproject.toml  settings.py
chatwoot/: __init__.py  client_apis.py
tests/: test_main.py
tests/chatwoot/: test_chatwoot_client_apis_integration.py  test_chatwoot_integration.py
