[project]
name = "chatwoot-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyinstaller>=6.14.1",
    "pyqt6>=6.9.1",
    "pytest>=8.4.1",
    "pytest-async>=0.1.1",
    "pytest-cov>=6.2.1",
    "requests>=2.32.4",
    "websocket-client>=1.8.0",
]

[tool.pytest.ini_options]
addopts = "-s --cov=. --cov-report=html --cov-report=term-missing --cov-fail-under=70"
# This is the directory where pytest will look for tests
# and the naming conventions for test files and functions.
# Adjust these as necessary for your project structure.
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

